GNOME Bugzilla – Bug 614582
2.30 contains a change which totally breaks background drawing
Last modified: 2010-04-01 13:55:15 UTC
Created attachment 157691 [details] patch to fix drawing breakage in 2.30 see subject and attachment, which fixes broken drawing. to replicate, just run ardour (http://ardour.org/) on any system with 2.30 installed, and compare to 2.26.
Created attachment 157694 [details] [review] improved fix for the issue This is the core fix for the problem. buf.bg_color is used by SVP drawing code for the canvas, so leaving it unset is an error.
Thanks, committed. Will do a release now.