Fix background drawing

One line was accidentally removed in b7b5fc64.

https://bugzilla.gnome.org/show_bug.cgi?id=614582